change title name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/img/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WL Capital Partners - Make Your Mark</title>
+    <title>Concierge Insurance Solutions - Make Your Mark</title>
   </head>
   <body>
     <div id="root"></div>
